# sudo-benchmarks

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
scripts/: run_benchmarks.sh
src/: benchmarks.rs  client.rs  main.rs  metrics.rs  models.rs
