[package]
name = "sudo-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.12.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
eventsource-stream = "0.2.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
bytes = "1.0"
rand = "0.9.1"
hdrhistogram = "7.5"

[[bin]]
name = "bench"
path = "src/main.rs"